conformance/tests/tcproute-invalid-reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-namespace
  namespace: gateway-conformance-infra
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: tcp-backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-from-group
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: not-the-group-youre-looking-for
      kind: TCPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: tcp-backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-from-kind
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: tcp-backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-from-namespace
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: not-the-namespace-youre-looking-for
  to:
    - group: ""
      kind: Service
      name: tcp-backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-to-group
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: gateway-conformance-infra
  to:
    - group: not-the-group-youre-looking-for
      kind: Service
      name: tcp-backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-to-kind
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Secret
      name: tcp-backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-to-name
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: not-the-service-youre-looking-for
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gateway-conformance-infra-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tcproute-referencegrant
  rules:
    - backendRefs:
        - name: tcp-backend
          namespace: gateway-conformance-app-backend
          port: 1234
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-tcproute-referencegrant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tcp
      port: 1234
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
